# self-fed-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml
app/api/: main.py  routes_chat.py
app/core/: config.py  embeddings.py  knowledge_store.py  memory.py  memory_router.py  preference_tracker.py  retriever.py  types.py
app/core/chains/: intelligent_qa_chain.py  memory_chain.py  qa_chain.py
app/core/vector_store/: mock.py  pinecone.py
app/ingestion/: markdown_loader.py
app/utils/: text_splitter.py
frontend/: __init__.py  app.py
scripts/: ingest_folder.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_chains.py  test_config.py  test_end_to_end_ingestion.py  test_ingestion_integration.py  test_markdown_loader.py  test_vector_store_integration.py
tests/integration/: test_api_chat.py  test_end_to_end_qa.py  test_frontend_headless.py  test_integration_intelligent_qa_chain.py  test_integration_markdown_loader.py  test_routes_complete.py  test_supabase_live.py
tests/manual/: __init__.py  test_manual_api_chat.py  test_manual_intelligent_qa.py  test_manual_qa_chain.py
tests/unit/: conftest.py  test_api_contracts.py  test_config.py  test_ingest_folder.py  test_ingestion.py  test_memory_manager.py  test_memory_router.py  test_mock_vector_store.py  test_mock_vector_store_failures.py  test_pinecone_vector_store.py  test_qa_chain.py  test_single_session_default.py  test_supabase_knowledge_store.py  test_time_weighted_retriever.py  test_unit_intelligent_qa_chain.py  test_unit_markdown_loader.py
